@@ -167,8 +167,8 @@ class STAT_FrontEnd(_object):
     def resume(self, blocking = True): return _STAT.STAT_FrontEnd_resume(self, blocking)
     def isRunning(self): return _STAT.STAT_FrontEnd_isRunning(self)
     def sampleStackTraces(self, *args): return _STAT.STAT_FrontEnd_sampleStackTraces(self, *args)
-    def gatherLastTrace(self, blocking = True): return _STAT.STAT_FrontEnd_gatherLastTrace(self, blocking)
-    def gatherTraces(self, blocking = True): return _STAT.STAT_FrontEnd_gatherTraces(self, blocking)
+    def gatherLastTrace(self, blocking = True, altDotFilename = None): return _STAT.STAT_FrontEnd_gatherLastTrace(self, blocking, altDotFilename)
+    def gatherTraces(self, blocking = True, altDotFilename = None): return _STAT.STAT_FrontEnd_gatherTraces(self, blocking, altDotFilename)
     def getLastDotFilename(self): return _STAT.STAT_FrontEnd_getLastDotFilename(self)
     def shutDown(self): return _STAT.STAT_FrontEnd_shutDown(self)
     def detachApplication(self, *args): return _STAT.STAT_FrontEnd_detachApplication(self, *args)
